--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .gradient-background {
-  background: linear-gradient(300deg, #6bdaff, #6089e4, #ffffff);
+  background: linear-gradient(300deg, #efff12, #6089e4, #ffffff);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
